mixin wrap width fix

--- a/css/common.scss
+++ b/css/common.scss
@@ -23,6 +23,7 @@ $breakpoints: (
     max-width: calc(1000px + 2rem);
     margin: auto;
     padding: 0 1rem;
+    width: 100%;
 }
 
 .is_pc,
